user account: added displaying of dialog.

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
     "eva-icons": "^1.1.0",
+    "font-awesome": "^4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "moment": "^2.24.0",
@@ -64,7 +65,7 @@
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "primeicons": "^2.0.0",
-    "primeng": "^9.0.0-rc.2",
+    "primeng": "^9.0.0-rc.4",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.3.0",
