--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
               "node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
               "src/app/@theme/styles/styles.scss",
               "node_modules/primeicons/primeicons.css",
+              "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/primeng/resources/themes/nova-light/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
             ],
