--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/primeng/resources/themes/nova-light/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": [
               "node_modules/pace-js/pace.min.js"
