--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "pace-js": "1.0.2",
     "primeflex": "^1.0.0",
     "primeicons": "^2.0.0",
-    "primeng": "^9.0.0-rc.4",
+    "primeng": "^9.0.0",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.3.0",
