--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-charts": "^13.0.2",
+    "@types/file-saver": "^2.0.1",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
@@ -59,6 +60,7 @@
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.3",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
