--- a/src/main/web/package.json
+++ b/src/main/web/package.json
@@ -52,6 +52,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-charts": "^13.0.2",
     "@types/file-saver": "^2.0.1",
+    "@types/lodash": "^4.14.165",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
     "chart.js": "^2.7.1",
@@ -65,6 +66,7 @@
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
+    "loadash": "^1.0.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.2",
     "ng2-smart-table": "^1.6.0",
